[package]
name = "v0_old"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "v0_old"
path = "main.rs"
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
itertools = "0.9.0"
regex = "1.3.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
