[package]
name = "v3_mem"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "v3_mem"
path = "main.rs"
[dependencies]
itertools = "0.9.0"
h4x_re = "0.2.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

